# AutoGoogleCalendar

./: .gitignore  README.md  gui_create.spec  pyproject.toml
autogooglecalendar/: __init__.py  create_event.py  gui_create.py  quickstart.py
